--- a/css/custom.css
+++ b/css/custom.css
@@ -19,6 +19,11 @@ h1{
     background-color: #F1F1F1;
 }
 
+#interested-badge
+{
+    background-color: orange;
+    color: aliceblue;
+}
 #fcard{
     border:1px solid #F1F1F1;
     background-color: #F1F1F1;
@@ -29,5 +34,5 @@ h1{
 
 body{
     font-family: Noto Sans, Arial, sans-serif;
-    font-size: 13px !important;
+    font-size: 15px !important;
 }
